--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,10 +106,10 @@ dependencies {
     implementation 'io.github.chaosleung:pinview:1.4.4'
 //    implementation 'com.google.firebase:firebase-admin:9.0.0'
     implementation 'cat.ereza:customactivityoncrash:2.4.0'
-
     annotationProcessor 'androidx.room:room-compiler:2.4.3'
     implementation 'com.google.mlkit:face-detection:16.1.5'
     implementation 'com.google.code.gson:gson:2.9.0'
+//    implementation 'androidx.core:core-splashscreen:1.0.0'
 
     // CameraX core library using the camera2 implementation
     def camerax_version = "1.1.0-beta01"
