Update v1.1.5 improve algorithm, add new login with email, and more

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -25,8 +26,8 @@ android {
         applicationId "com.absensi.inuraini"
         minSdk 21
         targetSdk 33
-        versionCode 114300922
-        versionName '1.1.4'
+        versionCode 115031022
+        versionName '1.1.5'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -110,6 +111,8 @@ dependencies {
     implementation 'com.google.mlkit:face-detection:16.1.5'
     implementation 'com.google.code.gson:gson:2.9.0'
 //    implementation 'androidx.core:core-splashscreen:1.0.0'
+    implementation 'com.google.firebase:firebase-crashlytics'
+    implementation 'com.google.firebase:firebase-analytics'
 
     // CameraX core library using the camera2 implementation
     def camerax_version = "1.1.0-beta01"
