--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,8 @@ android {
         applicationId "com.absensi.inuraini"
         minSdk 21
         targetSdk 33
-        versionCode 123161022
-        versionName '1.2.3'
+        versionCode 124171022
+        versionName '1.2.4'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -114,6 +114,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.android.volley:volley:1.2.1'
+    implementation "com.airbnb.android:lottie:3.4.0"
 
     // CameraX core library using the camera2 implementation
     def camerax_version = "1.2.0-beta02"
