--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,8 @@ android {
         applicationId "com.absensi.inuraini"
         minSdk 21
         targetSdk 33
-        versionCode 131211022
-        versionName '1.3.1'
+        versionCode 135221022
+        versionName '1.3.5'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -87,7 +87,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.gms:play-services-base:18.1.0'
-    implementation platform('com.google.firebase:firebase-bom:30.5.0')
+    implementation platform('com.google.firebase:firebase-bom:31.0.0')
     implementation 'com.google.firebase:firebase-auth:21.1.0'
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
     implementation 'com.google.firebase:firebase-database:20.1.0'
@@ -115,6 +115,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.airbnb.android:lottie:5.2.0'
+    implementation 'com.scottyab:rootbeer-lib:0.1.0'
 
     // CameraX core library using the camera2 implementation
     def camerax_version = "1.2.0-beta02"
