--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,8 @@ android {
         applicationId "com.absensi.inuraini"
         minSdk 21
         targetSdk 33
-        versionCode 138271022
-        versionName '1.3.8'
+        versionCode 139021022
+        versionName '1.3.9'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -111,10 +111,10 @@ dependencies {
     implementation 'cat.ereza:customactivityoncrash:2.4.0'
     annotationProcessor 'androidx.room:room-compiler:2.4.3'
     implementation 'com.google.mlkit:face-detection:16.1.5'
-    implementation 'com.google.code.gson:gson:2.9.1'
+    implementation 'com.google.code.gson:gson:2.10'
 //    implementation 'androidx.core:core-splashscreen:1.0.0'
-    implementation 'com.google.firebase:firebase-crashlytics'
-    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-crashlytics:18.3.1'
+    implementation 'com.google.firebase:firebase-analytics:21.2.0'
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.airbnb.android:lottie:5.2.0'
     implementation 'com.scottyab:rootbeer-lib:0.1.0'
@@ -126,7 +126,7 @@ dependencies {
 //    implementation 'com.applandeo:material-calendar-view:1.9.0-rc03'
 
     // CameraX core library using the camera2 implementation
-    def camerax_version = "1.2.0-beta02"
+    def camerax_version = '1.2.0-rc01'
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
