--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,24 +36,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AbsensiWajah"
         tools:targetApi="s">
-
-        <!--
-             TODO: Before you run your application, you need a Google Maps API key.
-
-             To get one, follow the directions here:
-
-                https://developers.google.com/maps/documentation/android-sdk/get-api-key
-
-             Once you have your API key (it starts with "AIza"), define a new property in your
-             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
-             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
-        -->
+        <activity
+            android:name=".admin.location.SpotTestActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_api" />
-
-<!--        <uses-library android:name="org.apache.http.legacy" android:required="false" />-->
-
+            android:value="@string/google_maps_api" /> <!-- <uses-library android:name="org.apache.http.legacy" android:required="false" /> -->
         <activity
             android:name=".admin.location.maps.MapsActivity"
             android:exported="false"
