--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,8 @@ android {
         applicationId "com.absensi.inuraini"
         minSdk 21
         targetSdk 33
-        versionCode 139021122
-        versionName '1.3.9'
+        versionCode 140171122
+        versionName '1.4.0'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -76,7 +76,7 @@ android {
     sourceSets {
         main {
             res {
-                srcDirs 'src\\main\\res', 'src\\main\\res\\color'
+                srcDirs 'src\\main\\res'
             }
         }
     }
@@ -127,7 +127,7 @@ dependencies {
 //    implementation 'com.applandeo:material-calendar-view:1.9.0-rc03'
 
     // CameraX core library using the camera2 implementation
-    def camerax_version = '1.2.0-rc01'
+    def camerax_version = '1.3.0-alpha01'
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
