--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,12 @@ plugins {
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
+apply plugin: 'stringfog'
+apply plugin: 'top.niunaijun.blackobfuscator'
+
+// 导入RandomKeyGenerator类，如果不使用RandomKeyGenerator，可以删除此行
+import com.github.megatronking.stringfog.plugin.kg.RandomKeyGenerator
+
 android {
     compileSdk 33
 
@@ -37,9 +43,42 @@ android {
         noCompress "tflite"
     }
 
+    stringfog {
+        // 必要：加解密库的实现类路径，需和上面配置的加解密算法库一致。
+        implementation 'com.github.megatronking.stringfog.xor.StringFogImpl'
+        // 可选：加密开关，默认开启。
+        enable true
+        // 可选：指定需加密的代码包路径，可配置多个，未指定将默认全部加密。
+        fogPackages = ['com.absensi.inuraini']
+        // 可选（3.0版本新增）：指定密钥生成器，默认使用长度8的随机密钥（每个字符串均有不同随机密钥）,
+        // 也可以指定一个固定的密钥：HardCodeKeyGenerator("This is a key")
+        kg new RandomKeyGenerator()
+        // 可选（4.0版本新增）：用于控制字符串加密后在字节码中的存在形式, 默认为base64，
+        // 也可以使用text或者bytes
+        mode bytes
+    }
+
+    // Configuration
+    BlackObfuscator {
+        // Enabled state
+        enabled true
+        // Obfuscation depth
+        depth 3
+        // The classes which need to be obfuscated
+        obfClass = [
+                "com.absensi.inuraini"
+//                "com.absensi.inuraini.DownloadTask",
+//                "com.absensi.inuraini.GetServerTime",
+//                "com.absensi.inuraini.mytools",
+//                "com.absensi.inuraini.common"
+        ]
+        // It will not obfuscate the classes that in blackClass
+//        blackClass = ["com.absensi.inuraini.common.CollectorActivity", "com.absensi.inuraini.user.absen.AbsenData"]
+    }
+
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         // add the code from below line.
@@ -121,6 +160,7 @@ dependencies {
     implementation 'com.github.clans:fab:1.6.4'
     implementation 'com.github.mancj:MaterialSearchBar:0.8.5'
     implementation 'com.h6ah4i.android.materialshadowninepatch:materialshadowninepatch:1.0.0'
+    implementation 'com.github.megatronking.stringfog:xor:4.0.1'
 //    implementation 'com.github.getActivity:XXPermissions:16.2'
 //    implementation 'com.github.billthefarmer:CustomCalendarView:v1.05'
 //    implementation 'com.github.MOLO17:CustomizableCalendar:v0.1.4'
