--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -145,7 +145,8 @@
         </activity>
         <activity
             android:name=".common.CollectorActivity"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/Theme.AbsensiWajah.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
