--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.14'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
         classpath 'com.android.tools.build:gradle:7.3.1'
+        classpath 'com.github.megatronking.stringfog:gradle-plugin:4.0.1'
+        classpath 'com.github.megatronking.stringfog:xor:4.0.1'
+        classpath "com.github.CodingGay:BlackObfuscator-ASPlugin:3.7"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
