Update v1.5.0 new ui for user, and fix some bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
         <activity
             android:name=".admin.location.maps.MapsActivity"
             android:exported="false"
+            android:hardwareAccelerated="true"
             android:label="@string/title_activity_maps" />
         <activity
             android:name=".user.absen.CalendarAbsenActivity"
