--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,8 @@ android {
         applicationId "com.absensi.inuraini"
         minSdk 21
         targetSdk 33
-        versionCode 145241122
-        versionName '1.4.5'
+        versionCode 150061222
+        versionName '1.5.0'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -155,6 +155,7 @@ dependencies {
     implementation 'com.github.mancj:MaterialSearchBar:0.8.5'
     implementation 'com.h6ah4i.android.materialshadowninepatch:materialshadowninepatch:1.0.0'
     implementation 'com.github.megatronking.stringfog:xor:4.0.1'
+//    implementation 'com.github.tejpratap46:PDFCreatorAndroid:3.0.2'
 //    implementation 'com.github.getActivity:XXPermissions:16.2'
 //    implementation 'com.github.billthefarmer:CustomCalendarView:v1.05'
 //    implementation 'com.github.MOLO17:CustomizableCalendar:v0.1.4'
@@ -169,5 +170,5 @@ dependencies {
     implementation "androidx.camera:camera-view:${camerax_version}"
     implementation "androidx.camera:camera-extensions:${camerax_version}"
 
-    implementation('org.tensorflow:tensorflow-lite:2.10.0') { changing = true }
+    implementation('org.tensorflow:tensorflow-lite:2.11.0') { changing = true }
 }
